Stop vertical center aligned cols from overflowing
Previously month columns would overflow off the top of the screen when
the column was taller than the viewport due to justify-content: center.

Using margin: auto to center fixes this as there is no margin when the
content is taller than the container

Details here: https://stackoverflow.com/a/49279237

--- a/styles/timeline.css
+++ b/styles/timeline.css
@@ -8,10 +8,7 @@ body {
     align-items: center;
     flex-direction: row;
     width: max-content;
-    height: calc(100vh - 8em);
-    padding-top: 4em;
-    padding-bottom: 4em;
-    padding-right: 4em;
+    height: 100vh;
 }
 
 .timeline-container h1 {
@@ -25,7 +22,7 @@ body {
 .timeline-container .column-left {
     position: sticky;
     height: 100%;
-    padding: 4em;
+    padding: 0 4em;
     left: 0;
     display: flex;
     justify-content: center;
@@ -40,8 +37,8 @@ body {
 }
 
 .timeline-container .month-column {
+    margin: auto;
     display: flex;
-    justify-content: center;
     flex-direction: column;
     row-gap: 0.1em;
     margin-right: 50px;
